fix the openMenu and close menu to work correctlyon tablet and mobile

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ li a:hover {
         background-color: #3E3E94;
         color: #fff;
         position: relative;
-        left: 650px;
+        left: 900px;
         transition: 1.5s ease-in-out;
     }
 
